# acton-reactive

./: '  .env  .envrc  .gitignore  3  CLAUDE.md  CONFIG_FEATURE_PLAN.md  Cargo.toml  DEDICATED_THREAD_AGENT_PLAN.md  DEDICATED_THREAD_AGENT_PLAN_v2.md  FEATURE_PLAN_README.md  Makefile  README.md  bad_commits.txt  bad_commits.txt.old  bisect.sh  filter-repo.sh  find_bad_commits.sh  findings.md  flake.nix  git_history_rewrite.sh
acton/: Cargo.toml  README.md
acton-cli/: .gitignore  Cargo.toml
acton-cli/src/: agents.rs  main.rs  messages.rs  screens.rs
acton-cli/src/agents/: scaffold_agent.rs  view_manager.rs
acton-cli/src/messages/: init_project.rs  menu_move_down.rs  menu_move_up.rs  menu_select.rs
acton-cli/src/screens/: home.rs  mod.rs  new.rs
acton-cli/test_project/: Cargo.toml
acton-cli/test_project/src/: agents.rs  main.rs
acton-core/: ARCHITECTURE.md  Cargo.toml  Cargo.toml.bak  GEMINI.md  NAMING_REVIEW.md  README.md  TODO.md
acton-core/config/: example-config.toml
acton-core/src/: lib.rs
acton-core/src/actor/: actor_config.rs  agent_config.rs  managed_actor.rs  managed_agent.rs  mod.rs
acton-core/src/actors/: actor_config.rs  managed_actor.rs
acton-core/src/common/: acton.rs  acton_inner.rs  actor_ref.rs  agent_broker.rs  agent_handle.rs  agent_reply.rs  agent_runtime.rs  broker.rs  config.rs  mod.rs  system_ready.rs  types.rs
acton-core/src/message/: broker_request.rs  broker_request_envelope.rs  envelope.rs  event_record.rs  message_address.rs  message_context.rs  message_envelope.rs  message_error.rs  mod.rs  outbound_envelope.rs  return_address.rs  signal.rs  subscribe_broker.rs  unsubscribe_broker.rs
acton-core/src/pool/: builder.rs  config.rs  item.rs  load_balance_strategy.rs  mod.rs
acton-core/src/traits/: acton_message.rs  acton_message_reply.rs  actor.rs  agent_handle_interface.rs  broker.rs  load_balancer_strategy.rs  mod.rs  pooled_actor.rs  subscribable.rs  subscriber.rs
acton-macro/: Cargo.toml  Cargo.toml.bak  README.md
acton-macro/src/: lib.rs
acton-reactive/: Cargo.toml  Cargo.toml.bak  FEATURE_SUMMARY.md  README.md
acton-reactive/benches/: actor_benchmarks.rs
acton-reactive/config/: example-config.toml
acton-reactive/examples/basic/: basic_example.tape  main.rs
acton-reactive/examples/broadcast/: README.md  broadcast_example.tape  main.rs
acton-reactive/examples/configuration/: config.toml  main.rs
acton-reactive/examples/fruit_market/: cart_item.rs  fruit_market_example.tape  main.rs  price_service.rs  printer.rs  register.rs
acton-reactive/examples/ipc_basic/: main.rs
acton-reactive/examples/ipc_bidirectional/: main.rs
acton-reactive/examples/ipc_bidirectional_client/: main.rs
acton-reactive/examples/ipc_bidirectional_demo/: README.md  client.rs  server.rs
acton-reactive/examples/ipc_client/: main.rs
acton-reactive/examples/ipc_client_libraries/: README.md
acton-reactive/examples/ipc_fruit_market/: README.md  display_client.rs  keyboard_client.rs  server.rs
acton-reactive/examples/ipc_multi_agent/: main.rs
acton-reactive/examples/ipc_multi_service/: README.md  client.rs  server.rs
acton-reactive/examples/ipc_streaming/: client.rs  server.rs
acton-reactive/examples/ipc_subscriptions/: README.md  client.rs  server.rs
acton-reactive/examples/lifecycles/: lifecycles_example.tape  main.rs
acton-reactive/examples/rgb_keyboard/: README.md  color_client.rs  input_client.rs  output_client.rs  server.rs  start.sh  stop.sh
acton-reactive/src/: lib.rs
acton-reactive/src/actor/: actor_config.rs  agent_config.rs  managed_actor.rs  managed_agent.rs  mod.rs  restart_limiter.rs  restart_policy.rs  supervision.rs
acton-reactive/src/common/: acton.rs  acton_inner.rs  actor_handle.rs  actor_reply.rs  actor_runtime.rs  agent_broker.rs  agent_handle.rs  agent_reply.rs  agent_runtime.rs  broker.rs  config.rs  mod.rs  types.rs
acton-reactive/src/message/: broker_request.rs  broker_request_envelope.rs  envelope.rs  message_address.rs  message_context.rs  message_error.rs  mod.rs  outbound_envelope.rs  signal.rs  subscribe_broker.rs  unsubscribe_broker.rs
acton-reactive/src/traits/: acton_message.rs  acton_message_reply.rs  actor_handle_interface.rs  agent_handle_interface.rs  broker.rs  mod.rs  subscribable.rs  subscriber.rs
acton-reactive/tests/: actor_tests.rs  broker_tests.rs  concurrent_handlers_tests.rs  config_loading_tests.rs  direct_messaging_tests.rs  docs_examples_tests.rs  launchpad_tests.rs  lifecycle_tests.rs  messaging_tests.rs  panic_recovery_tests.rs  reply_ergonomics_tests.rs  restart_limiter_tests.rs  restart_policy_tests.rs  result_error_handler_tests.rs  supervision_strategy_tests.rs
acton-reactive/tests/docs_examples/: actor_lifecycle.rs  actors_and_state.rs  core_concepts_messages_and_handlers.rs  core_concepts_the_actor_system.rs  core_concepts_what_are_actors.rs  handler_types.rs  messages_and_handlers.rs  mod.rs  (+6 more)
acton-test/: Cargo.toml  README.md
acton-test/acton_test_macro/: Cargo.toml
acton-test/src/: lib.rs
acton/src/: lib.rs
acton/tests/: actor_tests.rs  broker_tests.rs  direct_messaging_tests.rs  launchpad_tests.rs  lifecycle_tests.rs  load_balancer_tests.rs  messaging_tests.rs  supervisor_tests.rs
acton_test/: Cargo.toml  README.md
acton_test/acton_test_macro/: Cargo.toml
acton_test/src/: lib.rs
akton/: Cargo.toml
akton-core/: Cargo.toml
akton-core/src/: lib.rs  traits.rs
akton/src/: lib.rs
akton/tests/: actor_tests.rs  broker_tests.rs  launchpad_tests.rs  lifecycle_tests.rs  load_balancer_tests.rs  messaging_tests.rs  supervisor_tests.rs  tests.rs
akton_test/: Cargo.toml  README.md
akton_test/akton_test_macro/: Cargo.toml
akton_test/src/: lib.rs
govcraft-actify/: Cargo.toml
govcraft-actify-core/: Cargo.toml
govcraft-actify-core/src/: lib.rs
govcraft-actify-test/: Cargo.toml
govcraft-actify-test/src/: main.rs
govcraft-actify-test/tests/: tests.rs
govcraft-actify/src/: govcraft_system.rs  lib.rs
govcraft-actify/tests/: tests.rs
quasar/: Cargo.toml  ReadMe.md
quasar/src/: lib.rs  traits.rs
quasar/tests/: tests.rs
(+311 files in other folders)
