workspace = { members = ["quasar"] }
[package]
name = "matchit_poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quasar = { path = "quasar" }
matchit = "0.8.0"
anyhow = "1.0.82"
tokio = { version = "1.37.0", features = ["full"] }
dashmap = "5.5.3"
async-trait = "0.1.80"
tokio-util = { version = "0.7.10", features = ["rt"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
url-builder = {version = "0.1.1"}
quasar-qrn = {git = "ssh://git@github.com/GovCraft/quasar-qrn.git" }
