[workspace]
resolver = "2"

members = ["acton-core", "acton-macro", "acton-test", "acton-reactive"]

# Shared package metadata
[workspace.package]
version = "5.0.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/Govcraft/acton-reactive"
repository = "https://github.com/Govcraft/acton-reactive"

# Centralized dependencies
[workspace.dependencies]
# Internal crates
acton-core = { path = "acton-core", version = "5.0.0" }
acton-macro = { path = "acton-macro", version = "5.0.0" }
acton_test = { path = "acton-test", version = "5.0.0" }
acton_test_macro = { path = "acton-test/acton_test_macro", version = "5.0.0" }

# Async runtime
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
async-trait = "0.1.80"
futures = "0.3.30"

# Error handling
anyhow = "1.0.82"

# Tracing/logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Proc-macro utilities
syn = { version = "2.0.79", features = ["full"] }
quote = "1.0"

# Concurrency
dashmap = "6.1.0"
parking_lot = "0.12.3"

# Utilities
acton-ern = "1.0.0"
static_assertions = "1.1.0"
dyn-clone = "1.0.17"
derive-new = "0.7.0"
xdg = "2.5"
lazy_static = "1.4"
rand = "0.9.1"

# Dev/test dependencies
crossterm = { version = "0.28.1", features = ["event-stream"] }
mti = "1.0.0"
zerocopy = "0.8.24"
ansi_term = "0.12.1"
tempfile = "3.10.0"

# Shared lints
[workspace.lints.rust]
unsafe_code = "deny"
rust_2018_idioms = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
# Allow these pedantic lints that are too noisy
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Allow cognitive complexity for proc macros and complex agent logic
cognitive_complexity = "allow"
