[workspace]
resolver = "2"

members = ["acton-macro", "acton-test", "acton-reactive", "acton-test-macro"]

# Shared package metadata
[workspace.package]
version = "7.0.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/Govcraft/acton-reactive"
repository = "https://github.com/Govcraft/acton-reactive"

# Centralized dependencies
[workspace.dependencies]
# Internal crates
acton-macro = { path = "acton-macro", version = "7.0.0" }
acton-reactive = { path = "acton-reactive", version = "7.0.0" }
acton_test = { path = "acton-test", version = "7.0.0" }
acton_test_macro = { path = "acton-test-macro", version = "7.0.0" }

# Async runtime
tokio = { version = "1.37.0", features = ["rt-multi-thread", "sync", "time", "macros"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
async-trait = "0.1.80"
futures = "0.3.30"

# Error handling
anyhow = "1.0.82"

# Tracing/logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Proc-macro utilities
syn = { version = "2.0.79", features = ["full"] }
quote = "1.0"

# Concurrency
dashmap = "6.1.0"
parking_lot = "0.12.3"

# Utilities
acton-ern = "1.0.0"
static_assertions = "1.1.0"
dyn-clone = "1.0.17"
derive-new = "0.7.0"
xdg = "2.5"
rand = "0.9.1"

# Dev/test dependencies
crossterm = { version = "0.28.1", features = ["event-stream"] }
mti = "1.0.0"
zerocopy = "0.8.24"
ansi_term = "0.12.1"
tempfile = "3.10.0"

# CLI dependencies
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0.64"
handlebars = "6.1.0"

# Shared lints
[workspace.lints.rust]
warnings = "deny"
unsafe_code = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow these pedantic lints that are too noisy
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Allow cognitive complexity for proc macros and complex actor logic
cognitive_complexity = "allow"
