[package]
name = "acton-cli"
version = "0.1.0-alpha.1"
edition = "2021"

[dependencies]
acton-reactive = { version = "3.3.0" }
anyhow = "1.0.89"
futures = "0.3.30"
tokio = { version = "1.40.0", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }  # or the latest version available
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0.64"
handlebars = "6.1.0"
ansi_term = "0.12.1"
