[package]
name = "acton-cli"
version = "0.1.0-alpha.1"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "CLI tooling for scaffolding and managing Acton Reactive Framework applications."

[dependencies]
acton-reactive.workspace = true
anyhow.workspace = true
futures.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
crossterm.workspace = true
miette.workspace = true
thiserror.workspace = true
handlebars.workspace = true
ansi_term.workspace = true

[lints]
workspace = true
