[package]
name = "acton-core"
version = "3.0.0-alpha.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Acton Core provides the core functionality and abstractions used by the Acton Reactive crate. It includes the essential building blocks for creating reactive and distributed systems."
documentation = "https://github.com/Govcraft/acton-reactive/blob/main/README.md"
homepage = "https://github.com/Govcraft/acton-reactive"
repository = "https://github.com/Govcraft/acton-reactive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints.rust]
unused = "allow"

[dependencies]
#rand = "0.8.5"
dashmap = "5.5.3"
tokio = { version = "1.37.0", features = ["full"] }
async-trait = "0.1.80"
anyhow = "1.0.82"
tokio-util = { version = "0.7.10", features = ["rt"] }
acton-ern = { git = "https://github.com/GovCraft/acton-ern.git", rev = "07be2f3575f35e3fcf422b377d3c6b229d0ea026" }
tracing = "0.1.40"
futures = "0.3.30"
static_assertions = "1.1.0"
dyn-clone = "1.0.17"
derive-new = "0.6.0"

[dev-dependencies]
dashmap = "5.5.3"
tokio = { version = "1.37.0", features = ["full"] }
acton_test = { path = "../acton_test" }
tokio-util = { version = "0.7.10", features = ["rt"] }
acton-ern = { git = "https://github.com/GovCraft/acton-ern.git", rev = "07be2f3575f35e3fcf422b377d3c6b229d0ea026" }
