[package]
name = "acton-core"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Acton Core provides the core functionality and abstractions used by the Acton Reactive crate. It includes the essential building blocks for creating reactive and distributed systems."

[dependencies]
dashmap.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tokio-util.workspace = true
tracing.workspace = true
futures.workspace = true
static_assertions.workspace = true
dyn-clone.workspace = true
derive-new.workspace = true
acton-ern.workspace = true
tracing-appender.workspace = true
xdg.workspace = true
serde.workspace = true
toml.workspace = true
lazy_static.workspace = true

[dev-dependencies]
acton_test.workspace = true

[lints]
workspace = true
