[package]
name = "acton-macro"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Acton Macro provides procedural macros that simplify the creation of messages and agents in the Acton framework, enabling more concise and expressive code."

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true

[lints]
workspace = true
