[package]
name = "acton-reactive"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Acton Reactive is the main crate of the Acton framework, designed for building reactive, event-driven, and asynchronous systems. It provides intuitive abstractions to make working with distributed agents seamless and efficient."

[dependencies]
acton-macro.workspace = true
dashmap.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
static_assertions.workspace = true
dyn-clone.workspace = true
derive-new.workspace = true
acton-ern.workspace = true
tracing-appender.workspace = true
xdg.workspace = true
serde.workspace = true
toml.workspace = true
rand.workspace = true

[dev-dependencies]
acton_test.workspace = true
crossterm.workspace = true
zerocopy.workspace = true
ansi_term.workspace = true
tempfile.workspace = true
chrono = "0.4.42"
scopeguard = "1.2.0"
futures.workspace = true

[features]
default = []
## IPC (Inter-Process Communication) support for external process messaging.
##
## Enables serialization infrastructure and type registration for sending messages
## across process boundaries via Unix domain sockets or other transports.
ipc = ["dep:mti", "dep:serde_json", "dep:parking_lot"]

[dependencies.parking_lot]
workspace = true
optional = true

[dependencies.mti]
workspace = true
optional = true

[dependencies.serde_json]
workspace = true
optional = true

[lints]
workspace = true
