[package]
name = "acton-reactive"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Acton Reactive is the main crate of the Acton framework, designed for building reactive, event-driven, and asynchronous systems. It provides intuitive abstractions to make working with distributed agents seamless and efficient."

[dependencies]
acton-macro.workspace = true
dashmap.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
static_assertions.workspace = true
dyn-clone.workspace = true
derive-new.workspace = true
acton-ern.workspace = true
tracing-appender.workspace = true
xdg.workspace = true
serde.workspace = true
toml.workspace = true
rand.workspace = true
rmp-serde = { version = "1.3.0", optional = true }

[dev-dependencies]
acton_test.workspace = true
crossterm.workspace = true
zerocopy.workspace = true
ansi_term.workspace = true
tempfile.workspace = true
chrono = "0.4.42"
scopeguard = "1.2.0"
futures.workspace = true

[features]
default = []
## IPC (Inter-Process Communication) support for external process messaging.
##
## Enables serialization infrastructure and type registration for sending messages
## across process boundaries via Unix domain sockets or other transports.
ipc = ["dep:mti", "dep:serde_json", "dep:parking_lot"]
## MessagePack binary serialization for IPC.
##
## Enables compact binary serialization as an alternative to JSON, providing
## ~30-50% smaller message sizes and faster parsing.
ipc-messagepack = ["ipc", "dep:rmp-serde"]

[dependencies.parking_lot]
workspace = true
optional = true

[dependencies.mti]
workspace = true
optional = true

[dependencies.serde_json]
workspace = true
optional = true

[lints]
workspace = true

# ============================================================================
# Examples
# ============================================================================

# IPC Bidirectional Demo (request-response pattern)
[[example]]
name = "ipc_bidirectional_server"
path = "examples/ipc_bidirectional_demo/server.rs"
required-features = ["ipc"]

[[example]]
name = "ipc_bidirectional_client"
path = "examples/ipc_bidirectional_demo/client.rs"
required-features = ["ipc"]

# IPC Multi-Service Demo (multiple agents with dashboard)
[[example]]
name = "ipc_multi_service_server"
path = "examples/ipc_multi_service/server.rs"
required-features = ["ipc"]

[[example]]
name = "ipc_multi_service_client"
path = "examples/ipc_multi_service/client.rs"
required-features = ["ipc"]

# IPC Basic (standalone self-contained IPC demo)
[[example]]
name = "ipc_basic"
path = "examples/ipc_basic/main.rs"
required-features = ["ipc"]

# IPC Subscriptions Demo (push notifications via broker subscriptions)
[[example]]
name = "ipc_subscriptions_server"
path = "examples/ipc_subscriptions/server.rs"
required-features = ["ipc"]

[[example]]
name = "ipc_subscriptions_client"
path = "examples/ipc_subscriptions/client.rs"
required-features = ["ipc"]

# IPC Streaming Demo (request-stream pattern with multiple responses)
[[example]]
name = "ipc_streaming_server"
path = "examples/ipc_streaming/server.rs"
required-features = ["ipc"]

[[example]]
name = "ipc_streaming_client"
path = "examples/ipc_streaming/client.rs"
required-features = ["ipc"]
