[package]
name = "acton-test"
version = "3.3.0"
edition = "2021"
description = "Testing utilities for Acton agents, providing tools to help in the testing and validation of agent behavior."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Govcraft/acton-reactive"
repository = "https://github.com/Govcraft/acton-reactive/acton_test"

authors = ["Roland Rodriguez <roland@govcraft.ai>"]
keywords = ["actor", "async", "testing"]
categories = ["asynchronous", "development-tools::testing"]

[dependencies]
acton_test_macro = { path = "./acton_test_macro", version = "3.3.0" }
parking_lot = "0.12.3"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.40"
