[package]
name = "acton_test"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Testing utilities for Acton actors, providing tools to help in the testing and validation of actor behavior."
authors = ["Roland Rodriguez <roland@govcraft.ai>"]
keywords = ["actor", "async", "testing"]
categories = ["asynchronous", "development-tools::testing"]

[dependencies]
acton_test_macro.workspace = true
parking_lot.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
