[package]
name = "akton-core"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
dashmap = "5.5.3"
tokio = { version = "1.37.0", features = ["full"] }
async-trait = "0.1.80"
anyhow = "1.0.82"
tokio-util = { version = "0.7.10", features = ["rt"] }
matchit = {version = "0.8.0"}
url = "2.5.0"
akton-arn = {git = "ssh://git@github.com/GovCraft/akton-arn.git" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
futures = "0.3.30"
static_assertions = "1.1.0"
log = "0.4.21"
