[package]
name = "akton-core"
version = "2.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints.rust]
unused = "allow"

[dependencies]
rand = "0.8.5"
dashmap = "5.5.3"
tokio = { version = "1.37.0", features = ["full"] }
async-trait = "0.1.80"
anyhow = "1.0.82"
tokio-util = { version = "0.7.10", features = ["rt"] }
matchit = {version = "0.8.0"}
url = "2.5.0"
akton-arn = {git = "https://github.com/GovCraft/akton-arn.git", rev="91813c541931462619ad2f8bc604b187d4e7155b"}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
futures = "0.3.30"
static_assertions = "1.1.0"
log = "0.4.21"
dyn-clone = "1.0.17"
type-safe-id = { version = "0.3.0", features = ["arbitrary", "serde"] }
