[package]
name = "govcraft-actify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
govcraft-actify-macro = { path = "../govcraft-actify-macro" }
govcraft-actify-core = { path = "../govcraft-actify-core" }
