[package]
name = "quasar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5.3"
tokio = { version = "1.37.0", features = ["full"] }
async-trait = "0.1.80"
anyhow = "1.0.82"
tokio-util = { version = "0.7.10", features = ["rt"] }
matchit = {version = "0.8.0"}
url = "2.5.0"
quasar-qrn = {git = "ssh://git@github.com/GovCraft/quasar-qrn.git" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
